--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coreschema==0.0.4
 cryptography==36.0.2
 defusedxml==0.7.1
 Django==4.0.4
+django-cors-headers==3.11.0
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
@@ -21,6 +22,7 @@ packaging==21.3
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.8
+python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2022.1
 requests==2.27.1
