--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-cors-headers==3.11.0
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
+djongo==1.3.6
 drf-yasg==1.20.0
 idna==3.3
 inflection==0.5.1
@@ -21,6 +22,7 @@ oauthlib==3.2.0
 packaging==21.3
 pycparser==2.21
 PyJWT==2.3.0
+pymongo==3.12.3
 pyparsing==3.0.8
 python-dotenv==0.20.0
 python3-openid==3.2.0
