--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.5.0
+black==22.6.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.5
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.2
@@ -18,12 +21,17 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+mypy-extensions==0.4.3
 oauthlib==3.2.0
 packaging==21.3
+pathspec==0.9.0
+Pillow==9.2.0
+platformdirs==2.5.2
 pycparser==2.21
 PyJWT==2.3.0
 pymongo==3.12.3
 pyparsing==3.0.8
+python-decouple==3.6
 python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2022.1
@@ -36,6 +44,7 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.2.0
 sqlparse==0.2.4
+tomli==2.0.1
 tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.9
