--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.5.0
+beautifulsoup4==4.11.2
 black==22.6.0
+bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -9,6 +11,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.2
 defusedxml==0.7.1
+distlib==0.3.6
 Django==4.0.4
 django-cors-headers==3.11.0
 django-templated-mail==1.1.1
@@ -16,21 +19,30 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djongo==1.3.6
 drf-yasg==1.20.0
+et-xmlfile==1.1.0
+filelock==3.9.0
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.1
+lxml==4.9.2
 MarkupSafe==2.1.1
 mypy-extensions==0.4.3
+numpy==1.23.3
 oauthlib==3.2.0
+openpyxl==3.0.10
 packaging==21.3
+pandas==1.5.0
 pathspec==0.9.0
 Pillow==9.2.0
+pipenv==2023.2.4
 platformdirs==2.5.2
+psycopg==3.1.12
 pycparser==2.21
 PyJWT==2.3.0
 pymongo==3.12.3
 pyparsing==3.0.8
+python-dateutil==2.8.2
 python-decouple==3.6
 python-dotenv==0.20.0
 python3-openid==3.2.0
@@ -43,8 +55,13 @@ ruamel.yaml.clib==0.2.6
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.2.0
+soupsieve==2.4
 sqlparse==0.2.4
 tomli==2.0.1
+typing_extensions==4.8.0
 tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.9
+virtualenv==20.17.1
+virtualenv-clone==0.5.7
+whitenoise==6.5.0
